# gqpp

./: .clang-tidy  .gitignore  .mdl.rb  .mdlrc  .shellcheckrc  AUTHORS  AppImageBuilder-aarch64.yml  AppImageBuilder-x86_64.yml  AppImageBuilder.yml  AppImageBuilderMinimal-aarch64.yml  AppImageBuilderMinimal-x86_64.yml  AppImageBuilderMinimal.yml  CHECKLIST.md  CODE_OF_CONDUCT.md  CODING  CODING.md  ChangeLog  ChangeLog.gqview  ChangeLog.html  DEVELOPER-NOTES.md  Makefile.am  Makefile.in  NEWS  README.lirc  README.md  TESTING.md  ZoneDetect.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  doxygen.conf  geeqie-install-debian.sh  geeqie.1  geeqie.desktop.in  geeqie.imp  geeqie.spec.in  gen_changelog.sh  gen_readme.sh  (+7 more)
doc/: Makefile.am  Makefile.in  create-doxygen-lua-api.sh  create-shortcuts-xml.sh  diagrams.c  diagrams.dox  docbook2html.sh  meson.build  toc.awk
doc/docbook/: CommandLineOptions.xml  GuideCollections.xml  GuideColorManagement.xml  GuideFaq.xml  GuideGnuFdl.xml  GuideImageManagement.xml  GuideImageManagementCopyMove.xml  GuideImageManagementDelete.xml  GuideImageManagementPlugins.xml  GuideImageManagementRename.xml  GuideImageMarks.xml  GuideImagePresentationFullscreen.xml  GuideImagePresentationSlideshow.xml  GuideImageSearch.xml  GuideImageSearchFindingDuplicates.xml  GuideImageSearchSearch.xml  GuideIndex.xml  GuideIntroduction.xml  GuideLicence.xml  GuideMainWindow.xml  GuideMainWindowFilePane.xml  GuideMainWindowFolderPane.xml  GuideMainWindowImagePane.xml  GuideMainWindowLayout.xml  GuideMainWindowMenus.xml  GuideMainWindowStatusBar.xml  GuideOptionsAdditional.xml  GuideOptionsAdvanced.xml  GuideOptionsBehavior.xml  GuideOptionsColor.xml  GuideOptionsFiltering.xml  GuideOptionsGeneral.xml  GuideOptionsHidden.xml  GuideOptionsImage.xml  GuideOptionsKeyboard.xml  GuideOptionsKeywords.xml  GuideOptionsLayout.xml  GuideOptionsMain.xml  GuideOptionsMetadata.xml  GuideOptionsOSD.xml  (+40 more)
doc/graphics/: geeqie-layout.xcf
doc/html/: meson.build
plugins/: Makefile.am  Makefile.in  meson.build  org.geeqie.template.desktop.in  template.desktop.in
plugins/camera-import/: Makefile.in  geeqie-camera-import  geeqie-camera-import-hook-script  geeqie-camera-import-hook-script.sh  geeqie-camera-import.sh  meson.build  org.geeqie.camera-import.desktop.in
plugins/exif-datetime-to-file/: geeqie-exif-datetime-to-file  geeqie-exif-datetime-to-file.sh  meson.build  org.geeqie.exif-datetime-to-file.desktop.in
plugins/export-jpeg/: Makefile.in  export-jpeg.desktop.in  geeqie-export-jpeg  geeqie-export-jpeg.sh  meson.build  org.geeqie.export-jpeg.desktop.in
plugins/geocode-parameters/: Makefile.in  geocode-parameters.awk  meson.build
plugins/image-crop/: Makefile.in  geeqie-image-crop  geeqie-image-crop.sh  image-crop.desktop.in  meson.build  org.geeqie.image-crop.desktop.in
plugins/lens/: Makefile.in  lensID  meson.build
plugins/open-archive/: Makefile.am  geeqie-open-archive  open-archive.desktop.in
plugins/open-with/: meson.build  org.geeqie.open-with.desktop.in
plugins/random-image/: Makefile.in  geeqie-random-image  geeqie-random-image.sh  meson.build  org.geeqie.random-image.desktop.in  random-image.desktop.in
plugins/refresh-thumbnail/: geeqie-refresh-thumbnail.sh  meson.build  org.geeqie.refresh-thumbnail.desktop.in
plugins/resize-image/: downsize  geeqie-resize-image  geeqie-resize-image.sh  meson.build  org.geeqie.resize-image.desktop.in  resize-help.sh  resize-image.desktop.in
plugins/rotate/: Makefile.in  geeqie-rotate  geeqie-rotate.sh  meson.build  org.geeqie.rotate.desktop.in
plugins/symlink/: Makefile.in  geeqie-symlink  geeqie-symlink.sh  meson.build  org.geeqie.symlink.desktop.in
plugins/tethered-photography/: Makefile.in  geeqie-tethered-photography  geeqie-tethered-photography-hook-script  geeqie-tethered-photography-hook-script.sh  geeqie-tethered-photography.sh  meson.build  org.geeqie.tethered-photography.desktop.in  tethered-photography.desktop.in
plugins/ufraw/: Makefile.in  geeqie-ufraw.desktop.in
plugins/video-player/: meson.build  org.geeqie.video-player.desktop.in
po/: POTFILES  POTFILES.in  README.md  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gen_translations_stats.sh  hu.po  id.po  it.po  ja.po  ko.po  meson.build  nb.po  nl.po  pl.po  pt_BR.po  regen_potfiles.sh  ro.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  th.po  tlh.po  tr.po  (+6 more)
scripts/: appimage-custom-apprun.sh  authors.sh  check-compiles.sh  clang-tidy-check.sh  dbus-session.sh  debug-check.sh  decode_sim  decode_sim.pl  desktop-file-validate.sh  devel-install.sh  doxygen-help.sh  doxygen.sh  enum-check.sh  geeqie-download-appimage.sh  geeqie.cppcheck  generate-ClayRGB1998-icc-h.sh  generate-appimage.sh  generate-linuxdeploy-for-arm.sh  generate-man-page.sh  get-test-images.sh  gq-marshal-pragma.sh  gtk4-migration-regression-check.sh  help-html-to-pdf.sh  image-test.py  image-test.sh  isolate-test.sh  keyword-mark.sh  keyword_merge.sh  lua-test.sh  meson.build  modify-downloaded-icons.sh  new-release-appimages.sh  new-release.sh  patch-loaders-cache.sh  recent-collections.sh  template-desktop.sh  temporary-comments-check.sh  test-all.sh  test-ancillary-files.sh  translators.sh  (+3 more)
scripts/zonedetect/: create_timezone_database  create_timezone_database.sh
src/: Makefile.am  Makefile.in  advanced-exif.c  advanced-exif.cc  advanced-exif.h  advanced_exif.c  advanced_exif.h  archives.cc  archives.h  backward.h  bar-comment.c  bar-comment.cc  bar-comment.h  bar-exif.cc  bar-exif.h  bar-gps.c  bar-gps.cc  bar-gps.h  bar-histogram.c  bar-histogram.cc  bar-histogram.h  bar-keywords.c  bar-keywords.cc  bar-keywords.h  bar-rating.c  bar-rating.cc  bar-rating.h  bar-sort.c  bar-sort.cc  bar-sort.h  bar.c  bar.cc  bar.h  bar_comment.c  bar_comment.cc  bar_exif.c  bar_exif.cc  bar_exif.h  bar_gps.c  bar_gps.cc  (+391 more)
src/authors/: authors.gresource.xml  meson.build
src/credits/: authors.sh  credits.gresource.xml  locales.txt  (+2 more)
tests/: Makefile.am  filecache.cc  gtest.cc  mock_debug.c
(+119 files in other folders)
